# enterprise-agentic-rag

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: debate.py  graph.py  response.py  retrieval.py  router.py  state.py  verification.py  web_search.py
backend/app/analytics/: service.py
backend/app/api/: analytics.py  auth.py  chat.py  documents.py  evaluations.py  feedback.py  routes.py  workspaces.py
backend/app/auth/: dependencies.py  security.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py  session.py
backend/app/evaluation/: ragas_runner.py
backend/app/ingestion/: loaders.py  pipeline.py
backend/app/memory/: store.py
backend/app/retrieval/: bm25.py  chroma.py  hybrid.py
backend/app/schemas/: analytics.py  auth.py  chat.py  documents.py  feedback.py  workspaces.py
backend/app/services/: chat_service.py  document_service.py
backend/app/tests/: test_auth.py  test_hybrid.py
docs/: api.md  architecture.md  deployment.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Button.tsx  Card.tsx  CitationList.tsx  StatTile.tsx
frontend/src/hooks/: useStreamChat.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: LoginPage.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
scripts/: check.ps1
(+3 files in other folders)
