[project]
name = "enterprise-agentic-rag-backend"
version = "0.1.0"
description = "Production-style FastAPI backend for an enterprise agentic RAG assistant."
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "bcrypt>=4.2.0,<5",
  "chromadb>=0.5.23",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "greenlet>=3.1.1",
  "httpx>=0.28.1",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.5",
  "langchain-community>=0.3.13",
  "langchain-core>=0.3.28",
  "langgraph>=0.2.60",
  "llama-index>=0.12.8",
  "llama-index-readers-file>=0.4.1",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.7.1",
  "pyjwt>=2.10.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "ragas>=0.2.9",
  "sentence-transformers>=3.3.1",
  "sqlalchemy>=2.0.36",
  "tavily-python>=0.5.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
